[gd_scene load_steps=5 format=2]

[ext_resource path="res://Crafts/MMBNBattleChips/Completed/battlechip_template.tscn" type="PackedScene" id=1]
[ext_resource path="res://Crafts/MMBNBattleChips/Completed/BattlechipFolder/battlechip.tscn" type="PackedScene" id=2]
[ext_resource path="res://Crafts/MMBNBattleChips/Completed/BattlechipFolder/battlechip_folder_display.gd" type="Script" id=3]
[ext_resource path="res://Crafts/MMBNBattleChips/Assets/Fonts/battlechip_sub_normal_font.tres" type="DynamicFont" id=4]

[node name="BattlechipFolder" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.027451, 0.188235, 0.0862745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 200.0
margin_bottom = 560.0

[node name="BattleChip" parent="HBoxContainer/Info" instance=ExtResource( 1 )]
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Additional" type="ColorRect" parent="HBoxContainer/Info"]
margin_top = 304.0
margin_right = 200.0
margin_bottom = 560.0
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[node name="Margin" type="MarginContainer" parent="HBoxContainer/Info/Additional"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="HBoxContainer/Info/Additional/Margin"]
margin_right = 180.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3
autowrap = true

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 204.0
margin_right = 984.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.2

[node name="Category" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 780.0
margin_bottom = 37.0
size_flags_vertical = 3
alignment = 2

[node name="NameSort" type="Button" parent="HBoxContainer/VBoxContainer/Category"]
margin_right = 604.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 18.0
custom_fonts/font = ExtResource( 4 )
text = "NAME"
flat = true

[node name="ElementSort" type="Button" parent="HBoxContainer/VBoxContainer/Category"]
margin_left = 608.0
margin_right = 691.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "ELEMENT"
flat = true

[node name="CodeSort" type="Button" parent="HBoxContainer/VBoxContainer/Category"]
margin_left = 695.0
margin_right = 780.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.5
custom_fonts/font = ExtResource( 4 )
text = "CODE"
flat = true

[node name="List" type="ScrollContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 780.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 14.0

[node name="Battlechips" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/List"]
margin_right = 768.0
margin_bottom = 1356.0
size_flags_horizontal = 3

[node name="Battlechip" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_right = 768.0

[node name="Battlechip2" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 34.0
margin_right = 768.0
margin_bottom = 64.0

[node name="Battlechip3" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 68.0
margin_right = 768.0
margin_bottom = 98.0

[node name="Battlechip4" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 102.0
margin_right = 768.0
margin_bottom = 132.0

[node name="Battlechip5" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 136.0
margin_right = 768.0
margin_bottom = 166.0

[node name="Battlechip6" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 170.0
margin_right = 768.0
margin_bottom = 200.0

[node name="Battlechip7" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 204.0
margin_right = 768.0
margin_bottom = 234.0

[node name="Battlechip8" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 238.0
margin_right = 768.0
margin_bottom = 268.0

[node name="Battlechip9" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 272.0
margin_right = 768.0
margin_bottom = 302.0

[node name="Battlechip10" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 306.0
margin_right = 768.0
margin_bottom = 336.0

[node name="Battlechip11" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 340.0
margin_right = 768.0
margin_bottom = 370.0

[node name="Battlechip12" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 374.0
margin_right = 768.0
margin_bottom = 404.0

[node name="Battlechip13" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 408.0
margin_right = 768.0
margin_bottom = 438.0

[node name="Battlechip14" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 442.0
margin_right = 768.0
margin_bottom = 472.0

[node name="Battlechip15" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 476.0
margin_right = 768.0
margin_bottom = 506.0

[node name="Battlechip16" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 510.0
margin_right = 768.0
margin_bottom = 540.0

[node name="Battlechip17" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 544.0
margin_right = 768.0
margin_bottom = 574.0

[node name="Battlechip18" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 578.0
margin_right = 768.0
margin_bottom = 608.0

[node name="Battlechip19" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 612.0
margin_right = 768.0
margin_bottom = 642.0

[node name="Battlechip20" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 646.0
margin_right = 768.0
margin_bottom = 676.0

[node name="Battlechip21" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 680.0
margin_right = 768.0
margin_bottom = 710.0

[node name="Battlechip22" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 714.0
margin_right = 768.0
margin_bottom = 744.0

[node name="Battlechip23" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 748.0
margin_right = 768.0
margin_bottom = 778.0

[node name="Battlechip24" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 782.0
margin_right = 768.0
margin_bottom = 812.0

[node name="Battlechip25" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 816.0
margin_right = 768.0
margin_bottom = 846.0

[node name="Battlechip26" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 850.0
margin_right = 768.0
margin_bottom = 880.0

[node name="Battlechip27" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 884.0
margin_right = 768.0
margin_bottom = 914.0

[node name="Battlechip28" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 918.0
margin_right = 768.0
margin_bottom = 948.0

[node name="Battlechip29" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 952.0
margin_right = 768.0
margin_bottom = 982.0

[node name="Battlechip30" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 986.0
margin_right = 768.0
margin_bottom = 1016.0

[node name="Battlechip31" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 1020.0
margin_right = 768.0
margin_bottom = 1050.0

[node name="Battlechip32" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 1054.0
margin_right = 768.0
margin_bottom = 1084.0

[node name="Battlechip33" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 1088.0
margin_right = 768.0
margin_bottom = 1118.0

[node name="Battlechip34" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 1122.0
margin_right = 768.0
margin_bottom = 1152.0

[node name="Battlechip35" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 1156.0
margin_right = 768.0
margin_bottom = 1186.0

[node name="Battlechip36" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 1190.0
margin_right = 768.0
margin_bottom = 1220.0

[node name="Battlechip37" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 1224.0
margin_right = 768.0
margin_bottom = 1254.0

[node name="Battlechip38" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 1258.0
margin_right = 768.0
margin_bottom = 1288.0

[node name="Battlechip39" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 1292.0
margin_right = 768.0
margin_bottom = 1322.0

[node name="Battlechip40" parent="HBoxContainer/VBoxContainer/List/Battlechips" instance=ExtResource( 2 )]
margin_top = 1326.0
margin_right = 768.0
margin_bottom = 1356.0
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Category/NameSort" to="HBoxContainer" method="_on_NameSort_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Category/ElementSort" to="HBoxContainer" method="_on_ElementSort_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Category/CodeSort" to="HBoxContainer" method="_on_CodeSort_pressed"]
